--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,6 @@ else()
 endif()
 
 
-add_executable(graphedit src/main.cpp src/graph/Graph.h src/graph/VertexPairMap.h src/graph/VertexMap.h src/finder/NaiveP3.h src/graph/GraphIO.h src/finder/CenterC4P4.h src/lower_bound/ExplicitMWISSolver.h src/graph/Subgraph.h src/Editor.h src/interfaces/LowerBoundI.h src/interfaces/FinderI.h src/interfaces/ConsumerI.h src/lower_bound/NoLowerBound.h src/selector/FirstEditable.h src/selector/LeastWeight.h src/interfaces/SelectorI.h src/Configuration.h src/definitions.h src/Instance.h src/Statistics.h src/finder/CenterP3.h src/lower_bound/IteratedLocalSearch.h src/Edits.h src/Bound.h src/tests/FinderTests.h src/lower_bound/GreedyLowerBound.h src/tests/Tests.h src/finder/NaiveC4P4.h src/finder/Center.h src/consumer/SubgraphStats.h src/tests/GraphTests.h src/tests/SubgraphTests.h src/tests/EditorTests.h)
+add_executable(graphedit src/main.cpp src/lower_bound/LB_ARW.h)
 
 target_link_libraries(graphedit PRIVATE Boost::boost)
