Adding ILP-solver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 3.13)
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
+
 project(Weighted_F-free_Edge_Editing)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -9,6 +12,24 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wshadow -Wnon-virtual-dt
 
 find_package(Boost REQUIRED)
 
-add_executable(graphedit src/main.cpp src/lower_bound/LB_ARW.h)
+find_package(GUROBI REQUIRED)
+include_directories(SYSTEM ${GUROBI_INCLUDE_DIRS})
+set(LIBS ${LIBS} ${GUROBI_CXX_LIBRARY} ${GUROBI_LIBRARIES} ${GUROBI_CXX_LIBRARY})
+
+
+#  GUROBI_FOUND - System has Gurobi
+#  GUROBI_INCLUDE_DIRS - The Gurobi include directories
+#  GUROBI_LIBRARIES - The libraries needed to use Gurobi
+#message(${GUROBI_CXX_LIBRARY})
+#message(${GUROBI_INCLUDE_DIRS})
+#message(${GUROBI_LIBRARIES})
+#message(${LIBS})
+
+add_executable(graphedit src/main.cpp)
 
 target_link_libraries(graphedit PRIVATE Boost::boost)
+target_link_libraries (graphedit LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT} ${LIBS})
+
+
+add_executable(ilp src/ilpsolver.cpp)
+target_link_libraries (ilp LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT} ${LIBS})
