--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,21 +21,24 @@ if(GUROBI_FOUND)
 endif(GUROBI_FOUND)
 
 
+find_package(YAML-CPP REQUIRED)
+include_directories(${YAML_CPP_INCLUDE_DIR})
+
 
 add_executable(graphedit src/main.cpp)
-target_link_libraries(graphedit LINK_PUBLIC ${Boost_LIBRARIES} )
+target_link_libraries(graphedit LINK_PUBLIC ${Boost_LIBRARIES} ${YAML_CPP_LIBRARIES})
 
 
 add_executable(fpt apps/run_fptsolver.cpp)
-target_link_libraries(fpt LINK_PUBLIC ${Boost_LIBRARIES} )
+target_link_libraries(fpt LINK_PUBLIC ${Boost_LIBRARIES} ${YAML_CPP_LIBRARIES})
 
 
 if(GUROBI_FOUND)
     add_executable(ilp apps/run_ilpsolver.cpp)
     target_link_libraries(ilp LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT} ${GUROBI_CXX_LIBRARY} ${GUROBI_LIBRARIES} ${GUROBI_CXX_LIBRARY})
-    target_link_libraries(ilp LINK_PUBLIC ${Boost_LIBRARIES} )
+    target_link_libraries(ilp LINK_PUBLIC ${Boost_LIBRARIES} ${YAML_CPP_LIBRARIES})
 endif(GUROBI_FOUND)
 
 
 add_executable(tests apps/run_tests.cpp)
-target_link_libraries(tests LINK_PUBLIC ${Boost_LIBRARIES} )
+target_link_libraries(tests LINK_PUBLIC ${Boost_LIBRARIES} ${YAML_CPP_LIBRARIES})
