--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,12 +33,22 @@ if(GUROBI_FOUND)
     add_definitions("-DGUROBI_FOUND")
 endif(GUROBI_FOUND)
 
-# ILS MWIS
+# NPS MWIS
 # TODO: Refactor as optional dependency
 # TODO: Refactor as CMAKE subfolder
-set(ILS_MWIS_SRC_FILES extern/ils_mwis/src/ArgPack.cpp extern/ils_mwis/src/bossa_timer.cpp extern/ils_mwis/src/Graph.cpp extern/ils_mwis/src/Solution.cpp)
-set_source_files_properties(${ILS_MWIS_SRC_FILES} PROPERTIES COMPILE_FLAGS "-w")
+set(NPS_MWIS_FOUND TRUE)
+if(NPS_MWIS_FOUND)
+    add_definitions(-DNPS_MWIS_FOUND)
+    set(NPS_MWIS_SRC_FILES extern/nps_mwis/src/ArgPack.cpp extern/nps_mwis/src/bossa_timer.cpp extern/nps_mwis/src/Graph.cpp extern/nps_mwis/src/Solution.cpp)
+    set_source_files_properties(${NPS_MWIS_SRC_FILES} PROPERTIES COMPILE_FLAGS "-w")
+endif(NPS_MWIS_FOUND)
 
+# LSSWZ MWIS
+set(LSSWZ_MWIS_FOUND TRUE)
+if(LSSWZ_MWIS_FOUND)
+    add_definitions(-DLSSWZ_MWIS_FOUND)
+    add_subdirectory(extern/lsswz_mwis/code)
+endif(LSSWZ_MWIS_FOUND)
 
 
 # Source files
@@ -46,8 +56,14 @@ set_source_files_properties(${ILS_MWIS_SRC_FILES} PROPERTIES COMPILE_FLAGS "-w")
 set(TEST_SRC_FILES src/tests/EditorTests.cpp src/tests/GraphTests.cpp src/tests/test_utils.cpp)
 set(FINDER_SRC_FILES src/finder/finder_utils.cpp src/finder/CenterC4P4.cpp src/finder/Center.cpp src/finder/SplitCluster.cpp src/finder/SplitGraph.cpp src/finder/CenterP3.cpp src/finder/NaiveP3.cpp src/finder/Endpoint.cpp src/finder/Naive.cpp src/finder/OuterP3.cpp)
 set(SELECTOR_SRC_FILES src/selector/selector_utils.cpp)
-set(LOWER_BOUND_SRC_FILES src/lower_bound/lower_bound_utils.cpp src/lower_bound/TrivialLowerBound.cpp src/lower_bound/SortedGreedyLowerBound.cpp src/lower_bound/GreedyLowerBound.cpp src/lower_bound/LocalSearchLowerBound.cpp src/lower_bound/ILSMWISSolverLowerBound.cpp)
-set(SRC_FILES ${FINDER_SRC_FILES} ${SELECTOR_SRC_FILES} ${LOWER_BOUND_SRC_FILES} src/Configuration.cpp src/graph/Subgraph.cpp src/options.cpp ${ILS_MWIS_SRC_FILES})
+
+set(LOWER_BOUND_SRC_FILES src/lower_bound/lower_bound_utils.cpp src/lower_bound/TrivialLowerBound.cpp src/lower_bound/SortedGreedyLowerBound.cpp src/lower_bound/GreedyLowerBound.cpp src/lower_bound/LocalSearchLowerBound.cpp)
+if(NPS_MWIS_FOUND)
+    set(LOWER_BOUND_SRC_FILES ${LOWER_BOUND_SRC_FILES} src/lower_bound/NPS_MWIS_SolverLowerBound.cpp)
+endif(NPS_MWIS_FOUND)
+
+set(SRC_FILES ${FINDER_SRC_FILES} ${SELECTOR_SRC_FILES} ${LOWER_BOUND_SRC_FILES} src/Configuration.cpp src/graph/Subgraph.cpp src/options.cpp ${NPS_MWIS_SRC_FILES})
+
 
 add_executable(graphedit src/main.cpp ${SRC_FILES})
 add_executable(fpt apps/run_fptsolver.cpp ${SRC_FILES})
