Fixed NPS_MWIS_SRC_FILES by filtering main.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,10 +21,11 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DNDEBUG -Wno-unused-par
 if (NOT TMP_DIR)
     if (NOT DEFINED ENV{TMP_DIR})
         set(TMP_DIR /tmp CACHE PATH "Path to tmp directory")
-        message(STATUS "TMP_DIR is not defined. Using ${TMP_DIR} instead.")
+        message(WARNING "TMP_DIR is not defined.")
     else ()
         set(TMP_DIR $ENV{TMP_DIR} CACHE PATH "Path to tmp directory")
     endif ()
+    message(STATUS "Using ${TMP_DIR} as TMP_DIR.")
 endif ()
 
 # Generate version.h
@@ -61,6 +62,7 @@ find_package(NPS_MWIS)
 if (NPS_MWIS_FOUND)
     add_definitions(-DNPS_MWIS_FOUND)
     file(GLOB NPS_MWIS_SRC_FILES extern/nps_mwis/src/*.cpp)
+    list(FILTER NPS_MWIS_SRC_FILES EXCLUDE REGEX ".*/main.cpp")
     set_source_files_properties(${NPS_MWIS_SRC_FILES} PROPERTIES COMPILE_FLAGS "-w")
 else (NPS_MWIS_FOUND)
     message(STATUS "Not found NPS_MWIS: Download with extern/nps_mwis/get.sh")
@@ -81,13 +83,14 @@ file(GLOB FINDER_SRC_FILES src/finder/*.cpp)
 file(GLOB SELECTOR_SRC_FILES src/selector/*.cpp)
 file(GLOB SEARCH_STRATEGY_SRC_FILES src/search_strategy/*.cpp)
 
-set(LOWER_BOUND_SRC_FILES src/lower_bound/lower_bound_utils.cpp src/lower_bound/Trivial.cpp src/lower_bound/SortedGreedy.cpp src/lower_bound/Greedy.cpp src/lower_bound/LocalSearch.cpp)
+file(GLOB LOWER_BOUND_SRC_FILES src/lower_bound/*.cpp)
+list(FILTER LOWER_BOUND_SRC_FILES EXCLUDE REGEX "(.*/NPS_MWIS_Solver.cpp)|(.*/LSSWZ_MWIS_Solver.cpp)")
 
 if (NPS_MWIS_FOUND)
-    set(LOWER_BOUND_SRC_FILES ${LOWER_BOUND_SRC_FILES} src/lower_bound/NPS_MWIS_Solver.cpp)
+    list(APPEND LOWER_BOUND_SRC_FILES src/lower_bound/NPS_MWIS_Solver.cpp)
 endif (NPS_MWIS_FOUND)
 if (LSSWZ_MWIS_FOUND)
-    set(LOWER_BOUND_SRC_FILES ${LOWER_BOUND_SRC_FILES} src/lower_bound/LSSWZ_MWIS_Solver.cpp)
+    list(APPEND LOWER_BOUND_SRC_FILES src/lower_bound/LSSWZ_MWIS_Solver.cpp)
 endif (LSSWZ_MWIS_FOUND)
 
 set(SRC_FILES ${FINDER_SRC_FILES} ${SELECTOR_SRC_FILES} ${LOWER_BOUND_SRC_FILES} ${SEARCH_STRATEGY_SRC_FILES} src/Configuration.cpp src/graph/Subgraph.cpp src/options.cpp ${NPS_MWIS_SRC_FILES})
